# AAQL

./: AQL.grammar  AQL.semantic  CMakeLists.txt  README.md
Data/: NewWord.lst  UserDict.pdat
aql/: PerLoc.aql  Revenue.aql  Soccer.aql
dict/: Adj.dict  Department.dict
dict/soccer/: level.dict  match.dict  result.dict  soccer_team.dict
input/: PerLoc_2.txt  news-0-0.txt
output/: PerLoc_1.output  PerLoc_2.output  Revenue.output  Soccer.output
src/: NLPIR.h  aql_func.cpp  aql_func.h  extractor.cpp  extractor.h  lexer.cpp  lexer.h  main.cpp  nodes.h  op_apply_func.cpp  op_apply_func.h  op_block.cpp  op_block.h  op_clean.cpp  op_clean.h  op_create.cpp  op_create.h  op_create_dict.cpp  op_create_dict.h  op_create_rule.cpp  op_create_rule.h  op_dictionary.cpp  op_dictionary.h  op_filter.cpp  op_filter.h  op_join.cpp  op_join.h  op_output.cpp  op_output.h  op_project.cpp  op_project.h  op_regex.cpp  op_regex.h  op_scan.cpp  op_scan.h  op_union.cpp  op_union.h  operator.cpp  operator.h  parser.cpp  (+12 more)
test/: extractor_test.cpp  lexer_test.cpp  parser_test.cpp
